<resources>
    <string name="app_name">wALLet</string>
    <string name="description_revenue">Nút \"<b>XÓA</b>\" có chức năng xóa toàn bộ dữ liệu liên quan đến khoản thu, vui lòng cân nhắc kĩ...</string>
    <string name="description_expense">Nút \"<b>XÓA</b>\" có chức năng xóa toàn bộ dữ liệu liên quan đến khoản chi, vui lòng cân nhắc kĩ...</string>
    <string name="description_percentage">Nút \"<b>XÓA</b>\" có chức năng xóa toàn bộ dữ liệu liên quan đến khoản lãi suất, vui lòng cân nhắc kĩ...</string>
    <string name="description_loan">Nút \"<b>XÓA</b>\" có chức năng xóa toàn bộ dữ liệu liên quan đến khoản vay, vui lòng cân nhắc kĩ...</string>
    <string name="description_sms">Vui lòng nhập vào số điện thoại bạn thường xuyên sử dụng để nhận SMS xác thực.</string>
    <string name="description_otp">Mã xác thực (OTP) đã được gửi tới \n SĐT 0xxxxxxxxx</string>
    <string name="countdown_time_otp">Bạn có thể yêu cầu gửi mã mới sau 01:00</string>
    <string name="resend_otp"><u>Gửi lại mã</u></string>
    <string name="cannot_cancel">Bạn không thể quay lại ở màn hình này. \nQuay lại trang đăng nhập?</string>
    <string name="signin_success">Bạn đã tạo tài khoản thành công\nVui lòng quay lại trang đăng nhập.</string>
    <string name="fill_empty_field_phone_number">Số điện thoại không được để trống.</string>
    <string name="already_exits_on_database">Số điện thoại này đã được đăng kí.</string>
    <string name="fill_username">Trường tên đăng nhập không được để trống</string>
    <string name="fill_password">Trường mật khẩu không được để trống</string>
    <string name="updating_data">Đang cập nhật dữ liệu,\nvui lòng đợi trong giây lát...</string>
    <string name="delete_alert">Bạn chắc chắn muốn xóa giao dịch này?</string>
    <string name="api_vietcombank">Tỉ giá hối đoái được lấy từ API của ngân hàng Vietcombank, chỉ mang tính chất tham khảo.</string>
    <string name="empty_balance_1">Không có giao dịch nào! \nVui lòng chọn loại dòng tiền để xem chi tiết.</string>
    <string name="opt_not_working">Chức năng nhận OTP qua số điện thoại chưa thể sử dụng, \n ấn <b>\"Tiếp tục\"</b> để thực hiện bước tiếp theo.</string>
    <string name="login_session">Phiên đăng nhập đã hết hạn.\n Vui lòng đăng nhập lại!</string>


    <string-array name="list_expense">
        <item>Gia đình</item>
        <item>Ăn uống</item>
        <item>Sức khỏe</item>
        <item>Bảo hiểm</item>
        <item>Di chuyển</item>
        <item>Giáo dục</item>
        <item>Giải trí</item>
        <item>Hóa đơn</item>
        <item>Mua sắm</item>
        <item>Đầu tư</item>
        <item>Tiền chuyển đi</item>
    </string-array>

    <string-array name="list_revenue">
        <item>Lương</item>
        <item>Thu nhập khác</item>
        <item>Tiền chuyển vào</item>
    </string-array>

    <string-array name="list_percentage">
        <item>Trả lãi</item>
        <item>Thu lãi</item>
    </string-array>

    <string-array name="list_loan">
        <item>Cho vay</item>
        <item>Đi vay</item>
        <item>Thu nợ</item>
        <item>Trả nợ</item>
    </string-array>

    <string-array name="searching_list">
        <item>Truy vấn giao dịch</item>
        <item>Thêm giao dịch - khoản chi</item>
        <item>Thêm giao dịch - khoản thu</item>
        <item>Thêm giao dịch - khoản lãi suất</item>
        <item>Thêm giao dịch - khoản vay</item>
        <item>Giao dịch gần đây</item>
        <item>Giao dịch có giá trị lớn</item>
        <item>Thông tin cá nhân</item>
        <item>Tỉ giá hối đoái</item>
        <item>Đổi giao diện</item>
        <item>Đăng nhập bằng vân tay</item>
    </string-array>
</resources>