<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background001" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/removedicon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opt_not_working"
            android:fontFamily="@font/averta_regular_italic"
            android:textAlignment="center"
            android:textColor="@color/color_02"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_background"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/averta_bold"
                android:paddingBottom="10dp"
                android:text="Tạo tài khoản mới"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/averta_semibold"
                android:paddingBottom="5dp"
                android:text="Nhập mã OTP"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/otp_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/averta_semibold"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:text="@string/description_otp"
                android:textAlignment="center"
                android:textColor="@color/main_color_01"
                android:textSize="18sp" />

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:cursorVisible="true"
                android:fontFamily="@font/averta_bold"
                android:inputType="number"
                android:textColor="@color/main_color_01"
                android:textSize="22sp"
                app:cursorColor="@color/main_color_01"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="30dp"
                app:itemRadius="3dp"
                app:itemSpacing="10dp"
                app:itemWidth="30dp"
                app:lineColor="@color/main_color_01"
                app:lineWidth="1dp"
                app:viewType="rectangle" />

            <TextView
                android:id="@+id/countdown_time_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/averta_semibold"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/countdown_time_otp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/averta_semibold"
                android:paddingTop="5dp"
                android:paddingBottom="15dp"
                android:text="@string/resend_otp"
                android:textAlignment="center"
                android:textColor="@color/main_color_01"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/next_to_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averta_bold"
                    android:padding="15dp"
                    android:text="Tiếp tục"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>